# AngioFE

./: .gitignore  AngioFE code changes.md  CMakeLists.txt  README.md  doxyconfig.txt
AngioFE/: AngioElement.cpp  AngioElement.h  AngioFE.cpp  AngioFETask.cpp  AngioFETask.h  AngioPlot.cpp  AngioPlot.h  AngioStressPolicy.cpp  AngioStressPolicy.h  BranchingPolicy.cpp  BranchingPolicy.h  CellSpecies.cpp  CellSpecies.h  CommonAngioProperites.h  CommonAngioProperties.cpp  ContributionMix.cpp  ContributionMix.h  FEAngio.cpp  FEAngio.h  FEAngioMaterial.cpp  FEAngioMaterial.h  FEAngioMaterialPoint.cpp  FEAngioMaterialPoint.h  FECell.cpp  FECell.h  FEProbabilityDistribution.cpp  FEProbabilityDistribution.h  FiberManager.cpp  FiberManager.h  Fileout.cpp  Fileout.h  FragmentSeeder.cpp  FragmentSeeder.h  InitialModifiers.cpp  InitialModifiers.h  NodeDataInterpolation.cpp  NodeDataInterpolation.h  PositionDependentDirection.cpp  PositionDependentDirection.h  PreviousSegmentContribution.cpp  (+17 more)
AngioFE/Async/: async_test.cpp
AngioFE3/: AngioElement.cpp  AngioElement.h  AngioFE.cpp  AngioFETask.cpp  AngioFETask.h  AngioPlot.cpp  AngioPlot.h  AngioStressPolicy.cpp  AngioStressPolicy.h  BranchingPolicy.cpp  BranchingPolicy.h  CellSpecies.cpp  CellSpecies.h  ChemicalDepositInfo.h  ChemicalInfo.cpp  CommonAngioProperites.h  CommonAngioProperties.cpp  ContributionMix.cpp  ContributionMix.h  Culture.cpp  ECMInitializer.cpp  ECMInitializer.h  Elem.h  FEAngio.cpp  FEAngio.h  FEAngioMaterial.cpp  FEAngioMaterial.cpp~RF14f0d4cd.TMP  FEAngioMaterial.cpp~RF1a6e66da.TMP  FEAngioMaterial.cpp~RF1a783da6.TMP  FEAngioMaterial.cpp~RF1a7c001d.TMP  FEAngioMaterial.h  FEAngioMaterialBase.cpp  FEAngioMaterialBase.h  FEAngioMaterialPoint.cpp  FEAngioMaterialPoint.h  FECell.cpp  FECell.h  FEProbabilityDistribution.cpp  FEProbabilityDistribution.h  FiberManager.cpp  (+42 more)
Documentation/: AngioFE3_User_Manual.docx
Documentation/ExampleProblems/AnisotropyGradients/: Baseline_AnisotropyGradient.feb  Negative_AnisotropyGradient.feb  Positive_AnisotropyGradient.feb
Documentation/ExampleProblems/Interfaces/: AlignAcross_Interface.feb  AlignAcross_Interface.xplt  AlignAlong_Interface.feb  Baseline_Interface.feb  HighDensity_AlignAcross_Interface.feb  HighDensity_AlignAlong_Interface.feb  HighDensity_Interface.feb
Documentation/ExampleProblems/SimpleProblems/: Anisotropic_FAPDD.feb  Anisotropic_FiberPDD.feb  Isotropic_FAPDD.feb  Isotropic_FAPDD_v3.feb  Isotropic_FiberPDD.feb
Documentation/LaBelle2023_Reproducables/: README.md
Documentation/LaBelle2023_Reproducables/AnisotropyGradient_Simulations/: BaselineGradient.feb
Documentation/LaBelle2023_Reproducables/Calibration_Simulations/: Discrete_4_05_a3.feb  EFD_3_00_a3.feb  EFD_3_20_a3.feb  EFD_4_05_a3.feb
Documentation/LaBelle2023_Reproducables/InputFiles_FEBio3/AnisotropyGradient_Simulations/: NegativeGradient.feb  PositiveGradient.feb
Documentation/LaBelle2023_Reproducables/InputFiles_FEBio3/Calibration_Simulations/: Discrete_3_00_a3.feb  Discrete_3_05_a3.feb  Discrete_3_20_a3.feb  Discrete_4_00_a3.feb  Discrete_4_20_a3.feb  EFD_3_05_a3.feb  EFD_4_20_a3.feb
Documentation/LaBelle2023_Reproducables/InputFiles_FEBio3/TACS_Simulations/: TACS12.feb  TACS3.feb
Documentation/LaBelle2023_Reproducables/InputFiles_FEBio4/AnisotropyGradient_Simulations/: BaselineGradient.feb  NegativeGradient.feb  PositiveGradient.feb
Documentation/LaBelle2023_Reproducables/InputFiles_FEBio4/Calibration_Simulations/: Discrete_3_00_a3.feb  Discrete_3_05_a3.feb  Discrete_3_20_a3.feb  Discrete_4_00_a3.feb  Discrete_4_05_a3.feb  Discrete_4_20_a3.feb  EFD_3_00_a3.feb  EFD_3_05_a3.feb  EFD_3_20_a3.feb  EFD_4_00_a3.feb  EFD_4_20_a3.feb
Documentation/LaBelle2023_Reproducables/InputFiles_FEBio4/TACS_Simulations/: BaselineTACS.feb  TACS1.feb  TACS12.feb  TACS13.feb  TACS2.feb  TACS3.feb
Documentation/LaBelle2023_Reproducables/PseudoDeformationValidationMATLAB/: Pseudodeformation_Batch.m
Documentation/LaBelle2023_Reproducables/PseudoDeformationValidationMATLAB/ODF_Functions/: MapToUnitSphere.m  VisODF.m  computeFisherRao.m  getODFKnown.m  getODFPseudo.m
Documentation/LaBelle2023_Reproducables/PseudoDeformationValidationMATLAB/UniformSphereSampling/: ProjectOnSn.m
Documentation/LaBelle2023_Reproducables/TACS_Simulations/: BaselineTACS.feb  TACS1.feb  TACS13.feb  TACS2.feb
cpp_check/: angio_check.cppcheck
